# Randish-rs

./: Cargo.toml  LICENSE  README.md
src/: lcg.rs  lib.rs  seed.rs
