[package]
name = "randish_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["random", "lcg", "linear", "congruence"]
repository = "https://github.com/Spacelys/Randish-rs"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
